petit faute d'orthographe

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div>
     <h4 class="text-primary"><b><br>CENTRES D’INTERETS</b></h4> 
     <h5>cuisine</h5>
-    <h5>ciméma et musique</h5> 
+    <h5>cinéma et musique</h5> 
     <h5>Lecture</h5>
     </div>
 
